# thing-detector

./: LICENSE  pyproject.toml
config/: asgi.py  settings.py  urls.py
parking/: consumers.py  routing.py  urls.py  views.py
parking/templates/parking/: index.html  webcam.html
