[project]
name = "parking-lot-yolo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "channels-redis>=4.3.0",
    "channels[daphne]>=4.3.1",
    "django>=5.2.7",
    "numpy>=2.2.6",
    "opencv-python-headless>=4.12.0.88",
    "pillow>=12.0.0",
    "ultralytics>=8.3.227",
]
